--- a/notebooks/performance.ipynb
+++ b/notebooks/performance.ipynb
@@ -6,13 +6,14 @@
    "outputs": [],
    "source": [
     "from PartSegCore_compiled_backend.fast_unique import label_unique\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:32:32.016027Z",
-     "end_time": "2023-04-18T01:32:32.135218Z"
+     "end_time": "2023-05-05T08:56:14.260813921Z",
+     "start_time": "2023-05-05T08:56:13.994785972Z"
     }
    }
   },
@@ -38,8 +39,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:32:32.141149Z",
-     "end_time": "2023-04-18T01:32:32.268336Z"
+     "end_time": "2023-05-05T08:56:14.455992050Z",
+     "start_time": "2023-05-05T08:56:14.264613661Z"
     }
    }
   },
@@ -51,20 +52,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26.8 ms ± 316 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "3.33 ms ± 1.92 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "26.9 ms ± 407 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "4.81 ms ± 2.3 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "3.14 ms ± 67.6 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit np.unique(data)\n",
-    "%timeit label_unique(data, numpy_fallback=False)"
+    "%timeit label_unique(data, numpy_fallback=False)\n",
+    "%timeit pd.unique(data.ravel())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:32:32.272909Z",
-     "end_time": "2023-04-18T01:32:37.053870Z"
+     "end_time": "2023-05-05T08:56:22.877513440Z",
+     "start_time": "2023-05-05T08:56:14.404649457Z"
     }
    }
   },
@@ -76,20 +79,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33.1 ms ± 1.28 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "49 ms ± 3.21 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "30.5 ms ± 343 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "5.77 ms ± 3.19 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "3.3 ms ± 103 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit np.unique(data1)\n",
-    "%timeit label_unique(data1, numpy_fallback=False)"
+    "%timeit label_unique(data1, numpy_fallback=False)\n",
+    "%timeit pd.unique(data1.ravel())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:32:37.051351Z",
-     "end_time": "2023-04-18T01:32:43.788595Z"
+     "end_time": "2023-05-05T08:56:33.119441397Z",
+     "start_time": "2023-05-05T08:56:22.880722685Z"
     }
    }
   },
@@ -101,20 +106,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.9 ms ± 252 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "2.08 ms ± 149 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "15 ms ± 159 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "6.33 ms ± 2.25 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "3.42 ms ± 242 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit np.unique(data2)\n",
-    "%timeit label_unique(data2, numpy_fallback=False)"
+    "%timeit label_unique(data2, numpy_fallback=False)\n",
+    "%timeit pd.unique(data2.ravel())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:32:43.792654Z",
-     "end_time": "2023-04-18T01:33:13.432813Z"
+     "end_time": "2023-05-05T08:56:53.096560120Z",
+     "start_time": "2023-05-05T08:56:33.123419671Z"
     }
    }
   },
@@ -126,20 +133,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "262 ms ± 919 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "22.6 ms ± 1.67 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "279 ms ± 5.74 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "30.1 ms ± 4.64 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "32.6 ms ± 1.77 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit np.unique(data3)\n",
-    "%timeit label_unique(data3, numpy_fallback=False)"
+    "%timeit label_unique(data3, numpy_fallback=False)\n",
+    "%timeit pd.unique(data3.ravel())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:33:13.431035Z",
-     "end_time": "2023-04-18T01:33:17.351581Z"
+     "end_time": "2023-05-05T08:57:00.511900369Z",
+     "start_time": "2023-05-05T08:56:53.100979314Z"
     }
    }
   },
@@ -151,20 +160,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "162 ms ± 1.77 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "20.6 ms ± 1.69 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "163 ms ± 1.13 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "27.6 ms ± 6.19 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "30.5 ms ± 447 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit np.unique(data4)\n",
-    "%timeit label_unique(data4, numpy_fallback=False)"
+    "%timeit label_unique(data4, numpy_fallback=False)\n",
+    "%timeit pd.unique(data4.ravel())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:33:17.351473Z",
-     "end_time": "2023-04-18T01:33:47.036250Z"
+     "end_time": "2023-05-05T08:57:18.597337321Z",
+     "start_time": "2023-05-05T08:57:00.514185614Z"
     }
    }
   },
@@ -176,21 +187,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.16 ms ± 30.9 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "The slowest run took 7.90 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "876 µs ± 925 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "7.4 ms ± 113 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "The slowest run took 4.54 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "1.59 ms ± 863 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "3.15 ms ± 97.7 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit np.unique(data5)\n",
-    "%timeit label_unique(data5, numpy_fallback=False)"
+    "%timeit label_unique(data5, numpy_fallback=False)\n",
+    "%timeit pd.unique(data5.ravel())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:33:47.034162Z",
-     "end_time": "2023-04-18T01:33:59.469518Z"
+     "end_time": "2023-05-05T08:57:40.130367180Z",
+     "start_time": "2023-05-05T08:57:18.602520583Z"
     }
    }
   },
@@ -203,19 +216,21 @@
      "output_type": "stream",
      "text": [
       "[  0   1   2 180]\n",
-      "[  0   1   2 180]\n"
+      "[  0   1   2 180]\n",
+      "[  0   1 180   2]\n"
      ]
     }
    ],
    "source": [
     "print(label_unique(data5, numpy_fallback=False))\n",
-    "print(np.unique(data5))"
+    "print(np.unique(data5))\n",
+    "print(pd.unique(data5.ravel()))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:33:59.469426Z",
-     "end_time": "2023-04-18T01:33:59.487648Z"
+     "end_time": "2023-05-05T08:57:40.187249065Z",
+     "start_time": "2023-05-05T08:57:40.139179516Z"
     }
    }
   },
@@ -227,20 +242,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.5 ms ± 714 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "278 ms ± 1.08 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "21.7 ms ± 6.34 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "307 ms ± 33.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "92.3 ms ± 1.14 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit label_unique(data6, numpy_fallback=False)\n",
-    "%timeit np.unique(data6)"
+    "%timeit np.unique(data6)\n",
+    "%timeit pd.unique(data6.ravel())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:33:59.488856Z",
-     "end_time": "2023-04-18T01:34:10.377197Z"
+     "end_time": "2023-05-05T08:57:51.946585884Z",
+     "start_time": "2023-05-05T08:57:40.177617638Z"
     }
    }
   },
@@ -253,19 +270,21 @@
      "output_type": "stream",
      "text": [
       "[  0   1   2 200]\n",
-      "[  0   1   2 200]\n"
+      "[  0   1   2 200]\n",
+      "[  0   1 200   2]\n"
      ]
     }
    ],
    "source": [
     "print(label_unique(data6, numpy_fallback=False))\n",
-    "print(np.unique(data6))"
+    "print(np.unique(data6))\n",
+    "print(pd.unique(data6.ravel()))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:34:10.392595Z",
-     "end_time": "2023-04-18T01:34:10.692177Z"
+     "end_time": "2023-05-05T08:57:52.384707747Z",
+     "start_time": "2023-05-05T08:57:51.959656845Z"
     }
    }
   },
@@ -277,8 +296,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-18T01:34:10.693523Z",
-     "end_time": "2023-04-18T01:34:10.695920Z"
+     "end_time": "2023-05-05T08:57:52.388796764Z",
+     "start_time": "2023-05-05T08:57:52.387188620Z"
     }
    }
   }
