--- a/notebooks/performance.ipynb
+++ b/notebooks/performance.ipynb
@@ -37,9 +37,12 @@
     "data5[320:500, 30:100] = 2\n",
     "data5[20:200, 230:4100] = 180\n",
     "data6 = np.zeros((30, 1000, 1000), dtype=np.uint8)\n",
-    "data6[:, 20:200, 30:100] = 1\n",
+    "\n",
     "data6[:, 320:500, 30:100] = 2\n",
-    "data6[:, 20:200, 230:4100] = 200"
+    "data6[:, 20:200, 230:4100] = 200\n",
+    "\n",
+    "data7 = data6[:, ::2, ::2]\n",
+    "data8 = data6[:, 5:-5, 5:-5]"
    ]
   },
   {
@@ -56,9 +59,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26.2 ms ± 106 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "2.83 ms ± 455 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
-      "3.1 ms ± 64.6 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "31.1 ms ± 401 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "The slowest run took 14.09 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "11.9 ms ± 9.52 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "3.57 ms ± 172 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -79,10 +83,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29.9 ms ± 272 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "The slowest run took 5.53 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "3.49 ms ± 2.52 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "3.18 ms ± 61.8 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "29.7 ms ± 238 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "The slowest run took 4.39 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "13.7 ms ± 6.94 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "4.09 ms ± 232 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -101,10 +105,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.7 ms ± 68.8 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "The slowest run took 4.02 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "3.36 ms ± 1.83 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "3.09 ms ± 65 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "19.7 ms ± 214 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "The slowest run took 8.13 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "4.92 ms ± 5.03 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "3.23 ms ± 69.9 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -116,16 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "255 ms ± 997 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "23 ms ± 2.77 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "30.1 ms ± 275 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "307 ms ± 2.15 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "21.7 ms ± 1.41 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -137,19 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "162 ms ± 1.6 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "25 ms ± 10.1 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "30.8 ms ± 1.08 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%timeit np.unique(data4)\n",
     "%timeit label_unique(data4, numpy_fallback=False)\n",
@@ -158,19 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.39 ms ± 185 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "537 µs ± 242 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "3.11 ms ± 64.1 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%timeit np.unique(data5)\n",
     "%timeit label_unique(data5, numpy_fallback=False)\n",
@@ -179,19 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  0   1   2 180]\n",
-      "[  0   1   2 180]\n",
-      "[  0   1 180   2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(label_unique(data5, numpy_fallback=False))\n",
     "print(np.unique(data5))\n",
@@ -200,19 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11 ms ± 847 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "276 ms ± 827 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "91 ms ± 2.15 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%timeit label_unique(data6, numpy_fallback=False)\n",
     "%timeit np.unique(data6)\n",
@@ -221,19 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  0   1   2 200]\n",
-      "[  0   1   2 200]\n",
-      "[  0   1 200   2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(label_unique(data6, numpy_fallback=False))\n",
     "print(np.unique(data6))\n",
@@ -245,14 +198,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%timeit label_unique(data7, numpy_fallback=False)\n",
+    "%timeit np.unique(data7)\n",
+    "%timeit pd.unique(data7.ravel())"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(label_unique(data7, numpy_fallback=False))\n",
+    "print(np.unique(data7))\n",
+    "print(pd.unique(data7.ravel()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit label_unique(data8, numpy_fallback=False)\n",
+    "%timeit np.unique(data8)\n",
+    "%timeit pd.unique(data8.ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(label_unique(data8, numpy_fallback=False))\n",
+    "print(np.unique(data8))\n",
+    "print(pd.unique(data8.ravel()))"
+   ]
   }
  ],
  "metadata": {
@@ -271,9 +254,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
