remove obsolete code

--- a/notebooks/performance_napari.ipynb
+++ b/notebooks/performance_napari.ipynb
@@ -10,18 +10,12 @@
     "from collections import defaultdict\n",
     "from typing import Optional\n",
     "import numpy as np\n",
-    "from numba import njit, typed, prange\n",
+    "from numba import njit, prange\n",
     "from tqdm import tqdm\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "\n",
-    "from PartSegCore_compiled_backend.napari_mapping import (\n",
-    "    map_array_parallel,\n",
-    "    map_array_sequential,\n",
-    "    zero_preserving_modulo_sequential,\n",
-    "    zero_preserving_modulo_parallel,\n",
-    ")\n",
     "from data_util import labeled_particles\n",
     "\n",
     "sns.set_theme(style='darkgrid')"
@@ -79,23 +73,7 @@
     "def zero_preserving_modulo_numpy(values: np.ndarray, n: int, dtype: np.dtype, to_zero: int = 0) -> np.ndarray:\n",
     "    res = ((values - 1) % n + 1).astype(get_dtype_py(n + 1))\n",
     "    res[values == to_zero] = 0\n",
-    "    return res\n",
-    "\n",
-    "\n",
-    "@njit(parallel=True)\n",
-    "def map_array_numba(data: np.ndarray, dkt: typed.Dict) -> np.ndarray:\n",
-    "    if direct_colormap.use_selection:\n",
-    "        return (data == direct_colormap.selection).astype(np.uint8)\n",
-    "\n",
-    "    dkt = direct_colormap._get_typed_dict_mapping(data.dtype)\n",
-    "    target_dtype = minimum_dtype_for_labels(direct_colormap._num_unique_colors + 2)\n",
-    "    result_array = np.full_like(data, MAPPING_OF_UNKNOWN_VALUE, dtype=target_dtype)\n",
-    "    for i in prange(data.size):\n",
-    "        val = data.flat[i]\n",
-    "        if val in dkt:\n",
-    "            result_array.flat[i] = dkt[result_array.flat[i]]\n",
-    "\n",
-    "    return result_array"
+    "    return res"
    ]
   },
   {
