improve ruff configuration

--- a/notebooks/performance_label_unique.ipynb
+++ b/notebooks/performance_label_unique.ipynb
@@ -11,9 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "from PartSegCore_compiled_backend.fast_unique import label_unique\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import numpy as np"
    ]
   },
   {
@@ -165,11 +163,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(label_unique(data5, numpy_fallback=False))\n",
-    "print(np.unique(data5))\n",
-    "print(pd.unique(data5.ravel()))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -187,11 +181,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(label_unique(data6, numpy_fallback=False))\n",
-    "print(np.unique(data6))\n",
-    "print(pd.unique(data6.ravel()))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -209,11 +199,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(label_unique(data7, numpy_fallback=False))\n",
-    "print(np.unique(data7))\n",
-    "print(pd.unique(data7.ravel()))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -231,11 +217,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(label_unique(data8, numpy_fallback=False))\n",
-    "print(np.unique(data8))\n",
-    "print(pd.unique(data8.ravel()))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
