--- a/notebooks/performance_napari.ipynb
+++ b/notebooks/performance_napari.ipynb
@@ -9,14 +9,14 @@
    "source": [
     "from collections import defaultdict\n",
     "from typing import Optional\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from data_util import labeled_particles\n",
+    "from matplotlib import pyplot as plt\n",
     "from numba import njit, prange\n",
     "from tqdm import tqdm\n",
-    "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "\n",
-    "from data_util import labeled_particles\n",
     "\n",
     "sns.set_theme(style='darkgrid')"
    ]
@@ -140,7 +140,7 @@
    "source": [
     "def measure_data(data_li):\n",
     "    res = defaultdict(list)\n",
-    "    for data, name in tqdm(data_li):\n",
+    "    for _data, _name in tqdm(data_li):\n",
     "        r = %timeit -o -q zero_preserving_modulo_numba(data, n=49, to_zero=0, dtype=np.uint8)\n",
     "        res['numba'].append(r)\n",
     "        r = %timeit -o -q zero_preserving_modulo_numba_seq(data, n=49, to_zero=0, dtype=np.uint8)\n",
@@ -176,7 +176,6 @@
     }
    ],
    "source": [
-    "print('Profile modulo 49')\n",
     "predef_res = measure_data(data_list)"
    ]
   },
@@ -204,7 +203,6 @@
     }
    ],
    "source": [
-    "print('Profile random data modulo 49')\n",
     "random_res = measure_data(random_data)"
    ]
   },
@@ -230,7 +228,6 @@
     }
    ],
    "source": [
-    "print('Profile random data modulo 49')\n",
     "random_res3d = measure_data(random_data3d)"
    ]
   },
@@ -246,7 +243,7 @@
     "def make_dataframe(dkt, data_li):\n",
     "    df_data = []\n",
     "    for name, values in dkt.items():\n",
-    "        for tr, (data, data_name) in zip(values, data_li):\n",
+    "        for tr, (_data, data_name) in zip(values, data_li):\n",
     "            for run in tr.timings:\n",
     "                df_data.append([name, data_name, run])\n",
     "    return pd.DataFrame(df_data, columns=['name', 'data name', 'run time'])"
